@@ -160,7 +160,7 @@ public class PatientFormController extends PersonFormController {
 								pi.setLocation(ls.getLocation(Integer.valueOf(locs[i])));
 							}
 							if (idPrefStatus != null && idPrefStatus.length > i) {
-								pi.setPreferred(new Boolean(idPrefStatus[i]));
+								pi.setPreferred(Boolean.valueOf(idPrefStatus[i]));
 							}
 							new PatientIdentifierValidator().validate(pi, errors);
 							if (errors.hasErrors()) {
